--- a/server.properties
+++ b/server.properties
@@ -10,12 +10,12 @@ player-idle-timeout=0
 difficulty=1
 spawn-monsters=true
 op-permission-level=4
-pvp=true
+pvp=false
 snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=20
+max-players=7
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
@@ -29,7 +29,7 @@ resource-pack=
 spawn-animals=true
 white-list=false
 generate-structures=true
-online-mode=true
+online-mode=false
 max-build-height=256
 level-seed=
 prevent-proxy-connections=false
